# rust-demo

./: .gitignore  Cargo.toml  README.md  build.rs  rust-demo.code-workspace
.cargo/: config.toml
axum-blog/: Cargo.toml
axum-blog/src/: error.rs  lib.rs  main.rs
axum-blog/src/db/: mod.rs  paginate.rs
axum-blog/src/handler/: mod.rs
axum-blog/src/handler/backend/: index.rs  mod.rs
axum-blog/src/handler/frontend/: index.rs  mod.rs
axum-blog/src/view/frontend/: index.rs  mod.rs
axum-blog/templates/frontend/: base.html
demo01-rust/: Cargo.toml  README.md  ipc_mem_lock
demo01-rust/chapter1-function/: Cargo.toml
demo01-rust/chapter1-function/src/: main.rs
demo01-rust/chapter2-controlflow/: Cargo.toml
demo01-rust/examples/: asm.rs  async_await.rs  async_future.rs  async_future_expand.rs  async_tokio.rs  ipc_mem.rs  ipc_mem_lock.rs  ipc_pipe.rs  ipc_signal.rs  ipc_socket.rs  libc_sigaction.rs  rust_alloc.rs  rust_functional.rs  rust_phantom_data.rs  rust_pin_unpin.rs  rust_pointer.rs  rust_ptr.rs  rustix_eventfd.rs  rustix_futex.rs  rustix_futex_lock.rs  rustix_mmap.rs  rustix_mmap2.rs  rustix_process.rs  rustix_runtime.rs  sync_atomic.rs  sync_channel.rs  sync_future.rs  sync_lock.rs  sync_send_sync.rs  sync_thread.rs
demo01-rust/src/: main.rs
demo02-wgpu/: Cargo.toml
demo03-egui/: Cargo.toml
demo03-egui/chapter1-create/: Cargo.toml
demo03-egui/chapter2-components/: Cargo.toml
demo03-egui/chapter3-template/: Cargo.toml
demo03-egui/chapter3-template/src/: app.rs  lib.rs  main.rs
demo04-postgres/: Cargo.toml
demo04-postgres/src/: main.rs
demo04-postgres/src/_dev_utils/: mod.rs
demo04-test/: Cargo.toml
demo04-test/chapter1-unit-test/: Cargo.toml
demo05-axum/: Cargo.toml
demo05-axum/examples/validator/: Cargo.toml
demo05-axum/examples/validator/src/: main.rs
demo05-axum/site/: index.html
demo05-axum/src/: main.rs
demo05-rocket/: Cargo.toml
demo05-rocket/chapter1-hello/: Cargo.toml
demo05-rocket/chapter1-hello/src/: main.rs
demo06-auth/: Cargo.toml  README.md
demo06-auth/.cargo/: config.toml
demo06-auth/examples/: gen_key.rs  quick_dev.rs
demo06-auth/sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
demo06-auth/src/: config.rs  error.rs  main.rs
demo06-auth/src/_dev_utils/: dev_db.rs  mod.rs
demo06-auth/src/crypt/: error.rs  mod.rs  pwd.rs
demo06-auth/src/ctx/: error.rs  mod.rs
demo06-auth/src/log/: mod.rs
demo06-auth/src/model/: base.rs  error.rs  mod.rs  user.rs
demo06-auth/src/model/store/: error.rs  mod.rs
demo06-auth/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs
demo06-xilem/: Cargo.toml
demo07-encrypt/: Cargo.toml
demo07-encrypt/examples/: async_await.rs
demo07-encrypt/src/: error.rs  hmac_sha512.rs  main.rs
demo08-swc/: Cargo.toml  output.js
demo08-swc/examples/swc/: main.rs  minify-input.js  minify.rs  transform-input.js  transform.rs  transform_error.rs
demo08-swc/examples/swc_bundle/: bundle.rs  main.rs  path.rs
demo08-swc/examples/swc_bundle/assets/: a.js  main.js
demo08-swc/tests/: swc.rs
demo09-hyper/: Cargo.toml
demo09-hyper/src/: main.rs
demo10-axum-adv/ArdanRustService/no_workspace/deploy_bookstore/: .env  Cargo.toml
demo10-axum-adv/ArdanRustService/no_workspace/deploy_bookstore/src/: main.rs
demo10-axum-adv/ArdanRustService/no_workspace/deploy_bookstore/src/auth/: auth_layers.rs  mod.rs  web_service.rs
demo10-axum-adv/ArdanRustService/no_workspace/deploy_bookstore/src/bookstore/: mod.rs
demo10-axum-adv/ArdanRustService/no_workspace/deploy_bookstore/static_html/admin/: admin.html  book-edit.html
demo10-axum-adv/http-server/: Cargo.toml
demo10-axum-adv/http-server/src/: main.rs
demo10-axum-adv/http-server/web/: demo.html
demo11-wasm/: Cargo.toml
demo11-wasm/examples/demo01/: .gitignore  Cargo.toml  README.md  bun.lockb  package.json  rollup.config.js
demo11-wasm/examples/demo01/src/: index.js  lib.rs
demo11-wasm/src/: lib.rs
demo12-dominator-clone/: Cargo.toml
demo12-dominator-clone/examples/: macro_test.rs
demo12-dominator-clone/src/: bindings.rs  callbacks.rs  dom.rs  fragment.rs  lib.rs  macros.rs  operations.rs  traits.rs  utils.rs
demo13-signal/: Cargo.toml
demo13-signal/src/: lib.rs
demo13-signal/src/signal/: broadcaster.rs  mod.rs  mutable.rs
demo14-sqlx/: Cargo.toml
demo14-sqlx/examples/: listen.rs
demo14-sqlx/src/: main.rs
demo15-tokio/: Cargo.toml
demo15-tokio/src/: main.rs
