[workspace]
resolver = "2"
members = [
    # "demo01-rust",
    # "demo01-rust/chapter1-function",
    # "demo02-wgpu",
    # "demo03-egui",
    # "demo03-egui/chapter1-create",
    # "demo03-egui/chapter2-components",
    # "demo03-egui/chapter3-template",
    # "demo04-postgres", "demo09-hyper",
    "demo05-axum",
    # "demo06-auth", 
    # "demo07-encrypt", 
    # "demo08-swc",
    # "demo09-hyper",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
