[package]
name = "axum-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 异步框架
tokio = { version = "1", features = ["full"] }
# 序列化
serde = { version = "1", features = ["derive"] }
# web 框架
axum = "0.4"
#
config = "0.11"
dotenv = "0.15"
# 数据库
tokio-postgres = "0.7"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
deadpool-postgres = { version = "0.10", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = "0.3"
# markdown格式转换
pulldown-cmark = "0.9"
askama = "0.11"