[package]
name = "demo06-auth"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Allen <yymm197281200@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "rust实现用户登录的一个示例"

repository = "https://github.com/yymm120/rust-demo"



[dependencies]
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
# -- Data
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
sqlb = "0.3" # Optional
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Crypt & Encoding
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64-url = "2"
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
lazy-regex = "3"
async-trait = "0.1"
strum_macros = "0.25"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "2"