[package]
name = "validator"
version = "0.1.0"
edition = "2021"

[dependencies]
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }